[package]
name = "rocks-lang"
description = "Rust implementation of Crafting Interpreters' Lox Language."
version = "0.1.1"
edition = "2021"
authors = ["Boran Seckin <boran@boranseckin.com>"]
repository = "https://github.com/boranseckin/rocks"
license = "MIT"

[[bin]]
name = "rocks"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring = "1.4"
rustyline = "11.0"
home = "0.5"
peekmore = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
