[package]
name = "rocks-lang"
description = "Rust implementation of Crafting Interpreters' Lox Language."
version = "0.2.0"
edition = "2021"
authors = ["Boran Seckin <boran@boranseckin.com>"]
repository = "https://github.com/boranseckin/rocks"
license = "MIT"

[[bin]]
name = "rocks"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"
rustyline = "12.0"
peekmore = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
